Agregando dificultad a mi juego propio

--- a/sala-de-juegos/src/app/components/pages/juegos/simon/simon.component.css
+++ b/sala-de-juegos/src/app/components/pages/juegos/simon/simon.component.css
@@ -4,7 +4,7 @@
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
-    background: #ffffff;
+    background: #f7f7f7d7;
     border-radius: 16px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     font-family: 'Segoe UI', sans-serif;
