--- a/sala-de-juegos/src/app/components/pages/home/home.component.html
+++ b/sala-de-juegos/src/app/components/pages/home/home.component.html
@@ -16,6 +16,7 @@
                 <h3>Ahorcado</h3>
                 <p>Adiviná la palabra antes de que sea demasiado tarde.</p>
                 <button class="jugar-button" (click)="jugar('ahorcado')">Jugar</button>
+                <button class="ranking-button" (click)="verRanking('ahorcado')">Ver Ranking</button>
             </div>
 
             <!-- Juego: Mayor o Menor -->
@@ -23,6 +24,7 @@
                 <h3>Mayor o Menor</h3>
                 <p>¿Cuál número sigue? Adiviná si es mayor o menor.</p>
                 <button class="jugar-button " (click)="jugar('mayor-o-menor')">Jugar</button>
+                <button class="ranking-button" (click)="verRanking('mayor-o-menor')">Ver Ranking</button>
             </div>
 
             <!-- Juego: Preguntados -->
@@ -30,6 +32,7 @@
                 <h3>Preguntados</h3>
                 <p>Responde preguntas de cultura general. ¡Desafiá tu mente!</p>
                 <button class="jugar-button" (click)="jugar('preguntados')">Jugar</button>
+                <button class="ranking-button" (click)="verRanking('preguntados')">🏆 Ver Ranking</button>
             </div>
 
         </div>
