Resultados de ahoracado listos

--- a/sala-de-juegos/src/app/components/pages/juegos/preguntados/preguntados.component.html
+++ b/sala-de-juegos/src/app/components/pages/juegos/preguntados/preguntados.component.html
@@ -10,7 +10,7 @@
 
             <div class="game-info">
                 <span class="label">Puntuación:</span>
-                <span class="value">{{ state.score }}</span>
+                <span class="value">{{ state.puntaje }}</span>
             </div>
 
             <div class="progress-display">
